[tool.poetry]
name = "SwSpotify"
version = "1.2.3"
description = "Get currently playing song and artist from Spotify faster without using the API."
authors = ["Aadi Bajpai <clash@swaglyrics.dev>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "SwSpotify" },
]

repository = "https://github.com/SwagLyrics/SwSpotify"
documentation = "https://github.com/SwagLyrics/SwSpotify/blob/master/README.md"

keywords = ['spotify', 'swaglyrics', 'python', 'app']
classifiers= [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^2.0.1"
requests = "^2.25.1"
Flask-Cors = "^3.0.10"
dbus-python = {version = "^1.2.16", platform = "linux"}
pywin32 = {version = ">=301,<305", platform = "win32"}


[tool.poetry.dev-dependencies]
mock = "^4.0.3"
pytest = "^7.0.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

